# krakjam2024

./: .gitignore  Cargo.toml  justfile
src/game/: mod.rs
src/game/components/: animation.rs  collidable.rs  damage.rs  effect.rs  enemy.rs  follow_player.rs  health.rs  ignore_entity.rs  ignore_player.rs  immobility.rs  mod.rs  movement.rs  particle.rs  particle_generator.rs  player.rs  projectile.rs  speed.rs  spell.rs  sprite_data.rs
src/game/enemy/: mod.rs
src/game/states/: game_end.rs  gameplay.rs  mod.rs  new_gameplay.rs  preloader.rs
src/game/systems/: animation_controller.rs  collision_detector.rs  damage_dealer.rs  death.rs  effects_reactions.rs  enemy_controller.rs  enemy_jump_animation.rs  enemy_spawn.rs  immobility_controller.rs  mod.rs  movement_controller.rs  particle_manager.rs  player_controller.rs  projectile_controller.rs  slime_color.rs  spell_controller.rs  sprite_renderer.rs
src/game/ui/: health_bar.rs
src/game/utils/: events.rs  macros.rs  mod.rs  space.rs
src/game/utils/magic/: database.rs  mod.rs  spell.rs  spell_tag.rs
