[package]
name = "krakjam2024"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "game_web"
crate-type = ["cdylib"]

[dependencies]
hecs = "0.10.4"

[dependencies.micro-games-kit]
version = "0.24"
# path = "../micro-games-kit"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
